--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -88,7 +88,7 @@ a {
     font-size: 1.75rem; } }
 
 .project-tagline {
-  margin-bottom: 2rem;
+  margin-bottom: 40px;
   font-weight: normal;
   opacity: 0.7; }
 
