--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -244,19 +244,48 @@ a {
   .site-footer {
     font-size: 0.9rem; } }
 
-.menu {
-  text-align: center;
+.main-content {
+  padding-top: 0;
 }
 
-.menu-item {
+.main-menu {
+  position: relative;
+}
+
+.menu {
+  text-align: center;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  background: white;
+  margin: 0;
+  padding: 16px;
+}
+
+.menu--fixed {
+  position: fixed;
+  box-shadow: 0px 3px 5px #888888;
+}
+
+.menu__item {
   list-style: none;
   display: inline;
 }
 
-.page  {
-  display: none;
+.menu__item--active .menu__item-link {
+  text-decoration: underline;
 }
 
-.page-active {
+.menu__item-link {
+  padding: 10px;
+}
+
+.page  {
+  display: none;
+  padding-top: 60px;
+}
+
+.page--active {
   display: block;
 }
