--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -265,7 +265,8 @@ a {
 
 .menu--fixed {
   position: fixed;
-  box-shadow: 0px 3px 5px #888888;
+  box-shadow: 0px 3px 5px rgb(180, 180, 180);
+  opacity: 0.9;
 }
 
 .menu__item {
