--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -72,6 +72,7 @@ a {
     padding: 2rem 1rem; } }
 
 .project-name {
+  position: relative;
   margin-top: 0;
   margin-bottom: 0.1rem; }
 
@@ -296,4 +297,16 @@ a {
   margin-top: -15px;
   font-style: italic;
   padding-bottom: 20px;
+}
+.lang-switcher {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.lang-switcher a {
+  background: white;
+  color: #1e6bb8;
+  border-radius: 50%;
+  padding: 20px;
 }
